[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
cryptocompare = "^0.7.6"
pytube = "^15.0.0"
Pillow = "^10.0.0"
python-dateutil = "^2.8.2"
Webshot = "^0.6"
aiofiles = "^23.1.0"
googletrans = "^3.0.0"
google-search = "^1.1.1"
forex-python = "^1.8"
moviepy = "^1.0.3"
wolframalpha = "^5.0.0"
googlemaps = "^4.10.0"
openai = "^0.27.8"
pyppeteer = "^1.0.2"
psutil = "^5.9.5"
discord = "^2.3.1"
stripe = "^5.4.0"
pyfiglet = "^0.8.post1"
selenium = "^4.10.0"
pydub = "^0.25.1"
colorama = "^0.4.6"
youtube_dl = "^2021.12.17"
google-api-python-client = "^2.92.0"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
bs4 = "^0.0.1"
aiosqlite = "^0.19.0"
Faker = "^18.13.0"
webdriver-manager = "^3.8.6"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"